<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item  android:id="@+id/menuMapMode"
           android:icon="@drawable/ic_map_mode_gray_28"
           android:orderInCategory="1"
           android:title="@string/sz_map_mode"
           app:showAsAction="always">
        <menu>
            <item  android:id="@+id/menuMapModeNormal"
                   android:title="@string/sz_map_mode_normal"
                   app:showAsAction="never"/>

            <item  android:id="@+id/menuMapModeTerrain"
                   android:title="@string/sz_map_mode_terrain"
                   app:showAsAction="never"/>

            <item  android:id="@+id/menuMapModeSatellite"
                   android:title="@string/sz_map_mode_satellite"
                   app:showAsAction="never"/>
        </menu>

    </item>

    <item  android:id="@+id/menuMapMyLocation"
           android:icon="@drawable/ic_my_location_gray_28"
           android:orderInCategory="3"
           android:title="@string/sz_my_location"
           app:showAsAction="always"/>

    <item  android:id="@+id/menuMapTraffic"
           android:title="@string/sz_map_traffic"
           app:showAsAction="never"/>

    <item  android:id="@+id/menuMapPoint"
           android:title="@string/sz_map_add_point"
           app:showAsAction="never"/>


</menu>